style: created an adaptive website layout
- created an adaptive layout for news, contact pages and form

--- a/src/components/buttons/button.module.css
+++ b/src/components/buttons/button.module.css
@@ -1,6 +1,6 @@
 @import url("../../utils/styles/base/_normalize.scss");
-button, button > * {
-  font-family: "Inter", sans-serif;
+.Button, .SelectButton, .PostButton {
+  font-family: Inter, sans-serif;
 }
 
 .Button {
