--- a/src/components/buttons/button.module.scss
+++ b/src/components/buttons/button.module.scss
@@ -1,8 +1,8 @@
 @use '../../utils/styles/base/_variables' as v;
 @import url("../../utils/styles/base/_normalize.scss");
 
-button, button > * {
-  font-family: "Inter", sans-serif;
+.Button, .SelectButton, .PostButton {
+  font-family: Inter, sans-serif;
 }
 
 .Button {
