--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -1,8 +1,4 @@
 @import url("../../utils/styles/base/_normalize.scss");
-h3, p {
-  font-family: "Inter", sans-serif;
-}
-
 .Footer {
   display: flex;
   justify-content: center;
@@ -13,6 +9,9 @@ h3, p {
 .Footer {
   background-color: #141414;
   padding: 0 162px;
+}
+.Footer h3, .Footer p, .Footer a {
+  font-family: "Inter", sans-serif;
 }
 .Footer h3 {
   color: white;
