--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -1,12 +1,12 @@
 @import url("../../utils/styles/base/_normalize.scss");
-a {
-  font-family: "Inter", sans-serif;
-}
-
 .Header, .TopBanner, .TopBanner a, .Navbar {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.TopBanner a, .Header a {
+  font-family: "Inter", sans-serif;
 }
 
 .TopBanner {
@@ -28,7 +28,7 @@ a {
 
 .Header {
   position: sticky;
-  top: 0;
+  top: -1px;
   z-index: 5;
   flex-direction: column;
   border-bottom: 1px solid #262626;
@@ -82,6 +82,7 @@ a {
   object-fit: cover;
 }
 .Header .Navbar span > :last-child {
+  font-family: Inter, sans-serif;
   font-size: 18px;
   font-weight: 500;
   padding: 14px 20px;
@@ -92,21 +93,21 @@ a {
 .Header .Navbar span > :last-child:hover {
   background-color: #FFD11A;
 }
-.Header .Navbar .ButtonsContainer ul {
+.Header .Navbar .ButtonContainer ul {
   display: flex;
   gap: 10px;
 }
-.Header .Navbar .ButtonsContainer ul a {
+.Header .Navbar .ButtonContainer ul a {
   border-radius: 10px;
   padding: 14px 24px;
   color: #7E7E81;
   border: 1px solid rgba(0, 0, 0, 0);
   transition: 0.3s all ease-in-out;
 }
-.Header .Navbar .ButtonsContainer ul a:hover {
+.Header .Navbar .ButtonContainer ul a:hover {
   color: white;
 }
-.Header .Navbar .ButtonsContainer ul .Active {
+.Header .Navbar .ButtonContainer ul .Active {
   background-color: #141414;
   border: 1px solid #333333;
   color: white;
@@ -143,7 +144,7 @@ a {
     padding: 10px 14px;
     border-radius: 6px;
   }
-  .Header .Navbar .ButtonsContainer ul a {
+  .Header .Navbar .ButtonContainer ul a {
     border-radius: 6px;
     padding: 10px 18px;
     color: #7E7E81;
@@ -184,14 +185,25 @@ a {
     padding: 10px 14px;
     border-radius: 6px;
   }
-  .Header .Navbar .ButtonsContainer {
+  .Header .Navbar .Background {
+    position: absolute;
+    top: 78px;
+    left: 0;
+    display: none;
+    background-color: rgba(20, 20, 20, 0.6);
+    width: 100%;
+    height: 100vh;
+    cursor: pointer;
+    opacity: 0;
+  }
+  .Header .Navbar .ButtonContainer {
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 30px;
-    top: 78px;
+    top: 0;
     right: 0;
     height: calc(100vh - 78px);
     width: 350px;
@@ -199,14 +211,15 @@ a {
     overflow: hidden;
     background-color: #141414;
     border-left: 1px solid #262626;
+    cursor: auto;
   }
-  .Header .Navbar .ButtonsContainer ul {
+  .Header .Navbar .ButtonContainer ul {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 30px;
   }
-  .Header .Navbar .ButtonsContainer ul a {
+  .Header .Navbar .ButtonContainer ul a {
     border-radius: 6px;
     padding: 10px 18px;
     color: #7E7E81;
