--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -2,14 +2,16 @@
 @use "../../utils/styles/base/_mixin.scss" as m;
 @import url("../../utils/styles/base/_normalize.scss");
 
-a {
-  font-family: "Inter", sans-serif;
-}
-
 .Header, .TopBanner, .TopBanner a, .Navbar {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.TopBanner, .Header {
+  a {
+    font-family: "Inter", sans-serif;
+  }
 }
 
 .TopBanner {
@@ -33,7 +35,7 @@ a {
 
 .Header {
   position: sticky;
-  top: 0;
+  top: -1px;
   z-index: 5;
   flex-direction: column;
   border-bottom: 1px solid v.$dark-shade-15;
@@ -95,6 +97,7 @@ a {
       }
 
       > :last-child {
+        font-family: Inter, sans-serif;
         font-size: 18px;
         font-weight: 500;
         padding: 14px 20px;
@@ -108,7 +111,7 @@ a {
       }
     }
 
-    .ButtonsContainer ul {
+    .ButtonContainer ul {
       display: flex;
       gap: 10px;
 
@@ -175,7 +178,7 @@ a {
         }
       }
 
-      .ButtonsContainer ul {
+      .ButtonContainer ul {
         a {
           border-radius: 6px;
           padding: 10px 18px;
@@ -231,14 +234,26 @@ a {
         }
       }
 
-      .ButtonsContainer {
+      .Background {
+        position: absolute;
+        top: 78px;
+        left: 0;
+        display: none;
+        background-color: rgba(20, 20, 20, 0.6);
+        width: 100%;
+        height: 100vh;
+        cursor: pointer;
+        opacity: 0;
+      }
+
+      .ButtonContainer {
         position: absolute;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
         gap: 30px;
-        top: 78px;
+        top: 0;
         right: 0;
         height: calc(100vh - 78px);
         width: 350px;
@@ -246,6 +261,7 @@ a {
         overflow: hidden;
         background-color: v.$dark-shade-08;
         border-left: 1px solid v.$dark-shade-15;
+        cursor: auto;
 
         ul {
           display: flex;
