--- a/src/components/main/contactForm/style.module.css
+++ b/src/components/main/contactForm/style.module.css
@@ -1,8 +1,4 @@
 @import url("../../../utils/styles/base/_normalize.scss");
-h2, h3, p {
-  font-family: "Inter", sans-serif;
-}
-
 .ResourceContainerLeft > div {
   display: flex;
   flex-direction: column;
@@ -13,11 +9,10 @@ h2, h3, p {
   width: 80px;
 }
 .ResourceContainerLeft > div h1 {
-  font-family: "Kumbh Sans", sans-serif;
   color: white;
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 60px;
+  font-size: 58px;
+  font-weight: 500;
+  line-height: 75.4px;
 }
 
 .ResourceContainerRight form {
@@ -69,6 +64,7 @@ h2, h3, p {
   transform: rotate(45deg);
 }
 .ResourceContainerRight form > :last-child > div span label {
+  font-family: Inter, sans-serif;
   color: white;
   font-size: 18px;
   font-weight: 400;
@@ -82,6 +78,83 @@ h2, h3, p {
   font-size: 18px;
   font-weight: 500;
   line-height: 24px;
+}
+
+@media screen and (max-width: 1680px) {
+  .ResourceContainerLeft > div {
+    gap: 30px;
+    padding-right: 60px;
+  }
+  .ResourceContainerLeft > div > img {
+    width: 60px;
+  }
+  .ResourceContainerLeft > div h1 {
+    color: white;
+    font-size: 44px;
+    font-weight: 500;
+    line-height: 57.2px;
+  }
+  .ResourceContainerRight form {
+    gap: 30px;
+  }
+  .ResourceContainerRight form > div {
+    gap: 50px;
+  }
+  .ResourceContainerRight form > :last-child > div span {
+    gap: 10px;
+  }
+  .ResourceContainerRight form > :last-child > div span input {
+    width: 24px;
+    height: 24px;
+  }
+  .ResourceContainerRight form > :last-child > div span input:after {
+    top: 4.5px;
+    border-width: 0 2px 2px 0;
+  }
+  .ResourceContainerRight form > :last-child > div span label {
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .ResourceContainerRight form > :last-child button {
+    padding: 14px 34px;
+    color: #141414;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .ResourceContainerLeft > div {
+    gap: 20px;
+    padding-right: 0;
+  }
+  .ResourceContainerLeft > div > img {
+    width: 50px;
+  }
+  .ResourceContainerLeft > div h1 {
+    color: white;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 36.4px;
+  }
+  .ResourceContainerRight form > div {
+    flex-direction: column;
+    gap: 30px;
+  }
+  .ResourceContainerRight form > div > div {
+    width: 100%;
+  }
+  .ResourceContainerRight form > :last-child > div span {
+    gap: 6px;
+  }
+  .ResourceContainerRight form > :last-child > div span label {
+    color: white;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
