--- a/src/components/main/contactForm/style.module.scss
+++ b/src/components/main/contactForm/style.module.scss
@@ -2,10 +2,6 @@
 @use "../../../utils/styles/base/_mixin.scss" as m;
 @import url("../../../utils/styles/base/_normalize.scss");
 
-h2, h3, p {
-  font-family: "Inter", sans-serif;
-}
-
 .ResourceContainerLeft {
   > div {
     display: flex;
@@ -18,8 +14,7 @@ h2, h3, p {
     }
 
     h1 {
-      font-family: "Kumbh Sans", sans-serif;
-      @include m.font(white, 40px, 600, 60px);
+      @include m.font(white, 58px, 500, 75.4px);
     }
   }
 }
@@ -82,6 +77,7 @@ h2, h3, p {
           }
 
           label {
+            font-family: Inter, sans-serif;
             @include m.font(white, 18px, 400, 27px);
           }
         }
@@ -92,6 +88,102 @@ h2, h3, p {
         border-radius: 8px;
         background-color: v.$yellow-shade-90;
         @include m.font(v.$dark-shade-08, 18px, 500, 24px);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1680px) {
+  .ResourceContainerLeft {
+    > div {
+      gap: 30px;
+      padding-right: 60px;
+
+      > img {
+        width: 60px;
+      }
+
+      h1 {
+        @include m.font(white, 44px, 500, 57.2px);
+      }
+    }
+  }
+
+  .ResourceContainerRight {
+    form {
+      gap: 30px;
+
+      > div {
+        gap: 50px;
+      }
+
+      > :last-child {
+        > div {
+          span {
+            gap: 10px;
+
+            input {
+              width: 24px;
+              height: 24px;
+
+              &:after {
+                top: 4.5px;
+                border-width: 0 2px 2px 0;
+              }
+            }
+
+            label {
+              @include m.font(white, 16px, 400, 24px);
+            }
+          }
+        }
+
+        button {
+          padding: 14px 34px;
+          @include m.font(v.$dark-shade-08, 14px, 500, 24px);
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .ResourceContainerLeft {
+    > div {
+      gap: 20px;
+      padding-right: 0;
+
+      > img {
+        width: 50px;
+      }
+
+      h1 {
+        @include m.font(white, 28px, 500, 36.4px);
+      }
+    }
+  }
+
+  .ResourceContainerRight {
+    form {
+      > div {
+        flex-direction: column;
+        gap: 30px;
+
+        > div {
+          width: 100%;
+        }
+      }
+
+      > :last-child {
+        > div {
+          span {
+            gap: 6px;
+
+            label {
+              @include m.font(white, 14px, 400, 21px);
+            }
+          }
+        }
       }
     }
   }
