--- a/src/components/main/crossingTitle/style.module.scss
+++ b/src/components/main/crossingTitle/style.module.scss
@@ -17,7 +17,7 @@
     h1 {
       white-space: nowrap;
       font-family: "Kumbh Sans", sans-serif;
-      @include m.font(white, 58px, 500, 75.4px)
+      @include m.font(white, 80px, 500, 104px)
     }
 
     span {
@@ -28,6 +28,48 @@
       p {
         font-family: "Inter", sans-serif;
         @include m.font(v.$grey-shade-60, 18px, 400, 27px)
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1680px) {
+  .CrossingTitleSection {
+    padding: 60px 80px;
+
+    > div {
+      h1 {
+        @include m.font(white, 55px, 500, 75.4px)
+      }
+
+      span {
+        gap: 60px;
+
+        p {
+          @include m.font(v.$grey-shade-60, 16px, 400, 24px)
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .CrossingTitleSection {
+    padding: 40px 16px;
+
+    > div {
+      h1 {
+        @include m.font(white, 28px, 500, 36.4px)
+      }
+
+      span {
+        align-items: start;
+        flex-direction: column;
+        gap: 14px;
+
+        p {
+          @include m.font(v.$grey-shade-60, 14px, 400, 21px)
+        }
       }
     }
   }
