--- a/src/components/main/generalComponents/inputBlock/style.module.css
+++ b/src/components/main/generalComponents/inputBlock/style.module.css
@@ -1,5 +1,6 @@
 @import url("../../../../utils/styles/base/_normalize.scss");
 .InputBlock {
+  font-family: Inter, sans-serif;
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -44,6 +45,34 @@ small {
   position: absolute;
   bottom: -25px;
   color: #ca0000;
+}
+
+@media screen and (max-width: 1680px) {
+  .InputBlock {
+    gap: 12px;
+  }
+  .InputBlock label {
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+  }
+  .InputBlock input, .InputBlock textarea, .InputBlock input[type=tel] {
+    padding: 16px;
+    border-radius: 6px;
+    color: #666666;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+  small {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  small {
+    font-size: 12px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
