--- a/src/components/main/generalComponents/popup/popupProfile/style.module.css
+++ b/src/components/main/generalComponents/popup/popupProfile/style.module.css
@@ -1,32 +1,26 @@
 @import url("../../../../../utils/styles/base/_normalize.scss");
-h1 {
-  font-family: "Kumbh Sans", sans-serif;
+.ProfileContainer {
+  width: 100%;
+  overflow-y: scroll;
+  gap: 40px;
+}
+.ProfileContainer h1 {
   color: white;
   font-size: 40px;
   font-weight: 600;
   line-height: 60px;
 }
-
-h3, p {
-  font-family: "Inter", sans-serif;
-}
-
-h3 {
+.ProfileContainer h3 {
   color: white;
   font-size: 22px;
   font-weight: 600;
   line-height: 27px;
 }
-
-p {
+.ProfileContainer p {
   color: #666666;
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
-}
-
-.ProfileContainer {
-  gap: 40px;
 }
 .ProfileContainer, .ProfileContainer > div {
   display: flex;
@@ -41,6 +35,44 @@ p {
   border-radius: 50%;
   height: 100px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 1680px) {
+  .ProfileContainer {
+    gap: 30px;
+  }
+  .ProfileContainer h1 {
+    color: white;
+    font-size: 34px;
+    font-weight: 600;
+    line-height: 60px;
+  }
+  .ProfileContainer h3 {
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+  }
+  .ProfileContainer p {
+    color: #666666;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
+  .ProfileContainer > div {
+    gap: 15px;
+  }
+  .ProfileContainer img {
+    height: 80px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .ProfileContainer {
+    gap: 20px;
+  }
+  .ProfileContainer > div {
+    gap: 15px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
