--- a/src/components/main/generalComponents/popup/popupRegister/style.module.css
+++ b/src/components/main/generalComponents/popup/popupRegister/style.module.css
@@ -1,9 +1,9 @@
 @import url("../../../../../utils/styles/base/_normalize.scss");
 .FormContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 35px;
+  overflow-y: scroll;
+}
+.FormContainer > *:not(:last-child) {
+  margin-bottom: 35px;
 }
 .FormContainer .FileBlock {
   position: relative;
@@ -36,6 +36,7 @@
   gap: 8px;
 }
 .FormContainer > :last-child button {
+  font-family: Inter, sans-serif;
   background-color: #FFF5CC;
   padding: 15px 20px;
   border-radius: 8px;
@@ -50,6 +51,35 @@
 }
 .FormContainer > :last-child p:hover {
   color: white;
+}
+
+@media screen and (max-width: 1680px) {
+  .FormContainer {
+    padding: 0 60px;
+  }
+  .FormContainer > *:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .FormContainer .FileBlock label {
+    width: 80px;
+    height: 80px;
+  }
+  .FormContainer > :last-child {
+    gap: 6px;
+  }
+  .FormContainer > :last-child button {
+    padding: 10px 15px;
+    border-radius: 6px;
+    color: #141414;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 21px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .FormContainer {
+    padding: 0 16px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
