--- a/src/components/main/generalComponents/popup/popupRegister/style.module.scss
+++ b/src/components/main/generalComponents/popup/popupRegister/style.module.scss
@@ -3,10 +3,11 @@
 @import url("../../../../../utils/styles/base/_normalize.scss");
 
 .FormContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 35px;
+  overflow-y: scroll;
+
+  > *:not(:last-child) {
+    margin-bottom: 35px;
+  }
 
   .FileBlock {
     position: relative;
@@ -44,6 +45,7 @@
     gap: 8px;
 
     button {
+      font-family: Inter, sans-serif;
       background-color: v.$yellow-shade-90;
       padding: 15px 20px;
       border-radius: 8px;
@@ -58,5 +60,38 @@
         color: white;
       }
     }
+  }
+}
+
+@media screen and (max-width: 1680px) {
+  .FormContainer {
+    > *:not(:last-child) {
+      margin-bottom: 32px;
+    }
+
+    padding: 0 60px;
+
+    .FileBlock {
+      label {
+        width: 80px;
+        height: 80px;
+      }
+    }
+
+    > :last-child {
+      gap: 6px;
+
+      button {
+        padding: 10px 15px;
+        border-radius: 6px;
+        @include m.font(v.$dark-shade-08, 16px, 500, 21px);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .FormContainer {
+    padding: 0 16px;
   }
 }
