--- a/src/components/main/videos/style.module.css
+++ b/src/components/main/videos/style.module.css
@@ -1,8 +1,4 @@
 @import url("../../../utils/styles/base/_normalize.scss");
-h2, p {
-  font-family: "Inter", sans-serif;
-}
-
 .VideosSection {
   background-color: #141414;
 }
@@ -29,7 +25,7 @@ h2, p {
 .VideosSection > div .VideoBlock > div {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 30px;
   max-width: 880px;
 }
 .VideosSection > div .VideoBlock > div video {
@@ -49,6 +45,72 @@ h2, p {
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
+}
+
+@media screen and (max-width: 1680px) {
+  .VideosSection > div > :nth-child(odd) {
+    padding: 60px 60px 60px 80px;
+  }
+  .VideosSection > div > :nth-child(even) {
+    padding: 60px 80px 60px 60px;
+  }
+  .VideosSection > div .VideoBlock > div {
+    gap: 20px;
+  }
+  .VideosSection > div .VideoBlock > div video {
+    height: 331px;
+    border-radius: 10px;
+  }
+  .VideosSection > div .VideoBlock > div h2 {
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+  }
+  .VideosSection > div .VideoBlock > div p {
+    color: #98989A;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .VideosSection > div {
+    flex-direction: column;
+    align-items: center;
+    padding: 0 16px;
+  }
+  .VideosSection > div > :nth-child(odd), .VideosSection > div > :nth-child(even) {
+    border-right: none;
+    border-bottom: 1px solid #262626;
+    padding: 40px 0;
+  }
+  .VideosSection > div .VideoBlock {
+    width: 100%;
+    max-width: 868px;
+  }
+  .VideosSection > div .VideoBlock > div {
+    width: 100%;
+    gap: 4px;
+  }
+  .VideosSection > div .VideoBlock > div > div {
+    margin-bottom: 16px;
+  }
+  .VideosSection > div .VideoBlock > div video {
+    height: 210px;
+  }
+  .VideosSection > div .VideoBlock > div h2 {
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+  }
+  .VideosSection > div .VideoBlock > div p {
+    color: #98989A;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
